--- a/backend/TaskViewAPI/src/main/resources/static/index.html
+++ b/backend/TaskViewAPI/src/main/resources/static/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Demo</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width" />
-    <base href="/" />
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width"/>
+    <base href="/"/>
     <link rel="stylesheet" type="text/css"
-          href="/webjars/bootstrap/css/bootstrap.min.css" />
+          href="/webjars/bootstrap/css/bootstrap.min.css"/>
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript"
             src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -24,6 +24,15 @@
         <button onClick="logout()" class="btn btn-primary">Logout</button>
     </div>
 </div>
+<!--<div class="container text-danger error">
+    $.get("/error", function(data) {
+    if (data) {
+    $(".error").html(data);
+    } else {
+    $(".error").html('');
+    }
+    });
+</div>-->
 <script type="text/javascript"
         src="/webjars/js-cookie/js.cookie.js"></script>
 <script type="text/javascript">
@@ -54,6 +63,9 @@
             })
             return true;
           }
-        </script>
+
+
+
+</script>
 </body>
 </html>
